# embroid

./: README.md  demo.ipynb  embroid.py  pyproject.toml
data/: bert_embeddings.pickle  dbpedia_animal.tsv  labels.npy  roberta_embeddings.pickle  sbert_embeddings.pickle  votes.npy
